<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModels.Help">

    <ScrollView
        android:layout_width="344dp"
        android:layout_height="554dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:lineSpacingExtra="14sp"
                android:text="@string/acerca_de_la_t_cnica_pomodoro"
                android:textAlignment="textEnd"
                android:textColor="#DC6C49"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="314dp"
                android:layout_height="169dp"
                android:text="@string/es_un_m_todo_de_gesti_n_del_tiempo_desarrollado_por_francesco_cirillo_a_finales_de_los_80_esta_t_cnica_utiliza_un_temporizador_para_dividir_las_tareas_en_un_conjunto_de_intervalos_separados_por_descansos_la_t_cnica_pomodoro_aumenta_la_productividad_tomando_descansos_cortos_programados_con_regularidad_luego_de_algunos_ciclos_de_trabajo_y_descansos_cortos_es_posible_que_el_usuario_tome_un_descanso_mas_largo"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginBottom="0dp"
                android:text="@string/pasos_para_utilizar_los_temporizadores"
                android:textAlignment="viewStart"
                android:textColor="#C38B39"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:text="@string/_1_establezca_los_temporizadores_en_25_minutos_para_un_pomodoro" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:text="@string/_2_despu_s_de_completar_el_temporizador_ponga_una_marca_de_verificaci_n_en_su_lista_de_tareas_y_t_mese_un_breve_descanso_de_5_minutos" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/_3_estos_30_minutos_conforman_un_solo_ciclo_pomodor" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                android:text="@string/_2_trabaja_en_la_tarea_hasta_que_se_complete_el_temporizador" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:text="@string/_5_por_defecto_estos_son_nlos_tiempos_de_los_temporizadores_de_pomodoro_sin_embargo_el_usuario_puede_editar_el_tiempo_de_esos_temporizadores_e_incluso_la_cantidad_de_ciclos_pomodoro" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:text="6. Finalmente, el usuario podra pausar el temporizador o restablecer todo, tanto el temporizador como el contador de ciclos Pomodoro. " />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Pomodoro ™ y Pomodoro Technique®" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>