<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityModificar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextPomodoro"
                android:layout_width="160dp"
                android:layout_height="67dp"
                android:layout_marginBottom="48dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/pomodoro"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextDescanso"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/descanso"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextCiclos"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:ems="10"
                android:hint="@string/ciclos_pomodoro"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonCambios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="152dp"
                android:text="@string/guardar_cambios"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>