<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pausa"
        android:layout_width="100dp"
        android:layout_height="89dp"
        android:layout_marginBottom="192dp"
        android:contentDescription="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_name_botonpausa" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="102dp"
        android:layout_height="88dp"
        android:layout_marginBottom="192dp"
        android:contentDescription="@string/play"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_name_botonplay" />

    <TextView
        android:id="@+id/temporizador"
        android:layout_width="126dp"
        android:layout_height="88dp"
        android:layout_marginBottom="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stringtiempodescanso"
        android:layout_width="140dp"
        android:layout_height="22dp"
        android:layout_marginTop="172dp"
        android:text="@string/tiempo_de_descanso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reiniciar"
        android:layout_width="106dp"
        android:layout_height="88dp"
        android:layout_marginBottom="192dp"
        android:contentDescription="@string/reiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/pausa"
        app:srcCompat="@drawable/ic_action_name_reiniciar" />

    <TextView
        android:id="@+id/stringtiempopomodoro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/ciclo_pomodoro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>